docs: update activity, swagger
